# TFG-Chatbot

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  _config.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  vLLM-container.yml
.github/: RELEASE_PLEASE_SETUP.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  dev_problem.yml
.github/workflows/: README.md  build-containers.yml  ci.yml  infrastructure-tests.yml  integration-tests.yml  jekyll.yml  lint.yml  manual-release.yml  release-please.yml  release.yml  security.yml  unit-tests.yml
backend/: Dockerfile  __init__.py  api.py  config.py  models.py  pyproject.toml  pytest.ini  requirements.txt  test.py
backend/db/: mongo.py
backend/logic/: __init__.py  graph.py  models.py  prompts.py  testGraph.py  tools.py
backend/logic/tools/: guia_docente_scraper.py  tools.py
backend/tests/: conftest.py  test_get_guia_tool.py  test_graph.py  test_guia_scraper.py  test_rag_search_tool.py  test_testGraph.py  test_tools.py
daily scrum/: 1-10-25.md  29-9-25.md  30-9-25.md
daily scrum/octubre/: 2-10-25.md
devLog/daily scrum/: index.md
devLog/daily scrum/octubre/: 1-10-25.md  10-10-25.md  14-10-25.md  15-10-25.md  16-10-25.md  3-10-25.md  6-10-25.md  8-10-25.md  9-10-25.md  index.md
devLog/daily scrum/septiembre/: 30-9-25.md
devLog/sprint planing/: index.md  sprintPlanning_1.md
devLog/sprint retrospective/: index.md  sprintRetrospective_1.md
devLog/sprint reviews/: index.md  sprintReview_1.md
docs/: index.md
docs/ADR/: 0001-use-fastapi-for-api.md  0002-use-langchain-langgraph.md  0003-use-podman-for-containers.md  0004-use-sqlite-for-graph-memory.md  0005-use-pydantic-for-data-models.md  0006-use-pytest-for-testing.md  0007-use-vllm-for-fast-inference.md  0008-use-ollama-for-local-model-serving.md  0009-use-qdrant-for-vector-store.md  0010-use-mongodb-for-guia-docente.md  0011-use-uv-for-virtualenvs.md  0012-use-ruff-for-linting.md  0013-use-mypy-for-type-checking.md  0014-use-black-for-code-formatting.md  0015-use-isort-for-import-sorting.md  README.md  adr-template.md  index.md
docs/daily scrum/noviembre/: 10-11-25.md  11-11-25.md  12-11-25.md  4-11-25.md  5-11-25.md  6-11-25.md  7-11-25.md  8-11-25.md  9-11-25.md  index.md
docs/daily scrum/octubre/: 1-10-25.md  10-10-25.md  14-10-25.md  15-10-25.md  16-10-25.md  2-10-25.md  20-10-25.md  21-10-25.md  22-10-25.md  23-10-25.md  24-10-25.md  3-10-25.md  6-10-25.md  8-10-25.md  9-10-25.md
docs/daily scrum/septiembre/: 29-9-25.md  30-9-25.md  index.md
docs/notas/: CI_architecture.md  CI_workflow_note.md  Memoria_persistente.md  Project_docs_plan.md  RAG_Service_Stack.md  RAG_integration_tests_note.md  Release_workflows_guide.md
docs/sprint planing/: sprintPlanning_2.md
docs/sprint retrospective/: sprintRetrospective_2.md
rag-service/: .dockerignore  README.md  __init__.py  api.py  config.py  document_processor.py  embeddings.py  file_loader.py  models.py  requirements.txt  upload_example.py  vector_store.py
rag-service/routes/: files.py  general.py  search_index.py  subjects.py
rag_service/: .env.example  Dockerfile  README.md  __init__.py  api.py  config.py  models.py  pyproject.toml  pytest.ini  requirements.txt  upload_example.py
rag_service/documents/: __init__.py  document_processor.py  file_loader.py  file_utils.py
rag_service/embeddings/: __init__.py  embeddings.py  store.py
rag_service/routes/: __init__.py  files.py  general.py  search_index.py  subjects.py
rag_service/tests/: README.md  conftest.py  test_document_processor.py  test_embeddings_service.py  test_file_loader.py  test_file_utils.py  test_files_routes.py  test_general_routes.py  test_integration.py  test_search_index_routes.py  test_subjects_routes.py  test_vector_store.py
scripts/: bump_version.py  download_model.py  init_ollama.sh  new_adr.sh  release.sh  run_fastAPI.sh
tests/: __init__.py  conftest.py  test_container.py
tests/backend/: conftest.py  test_graph.py  test_tools.py
tests/infrastructure/: README.md  test_backend_container.py  test_mongo_container.py  test_ollama_container.py  test_qdrant_container.py  test_rag_service_container.py  test_vllm_container.py
tests/integration/: README.md  conftest.py  test_backend.py  test_rag_service.py
