[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfg-chatbot"
version = "0.1.4"
description = "TFG Chatbot project"
readme = "README.md"
license = { file = "LICENSE" }
authors = [ { name = "Gabriel Francisco" } ]
dependencies = [
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "testinfra>=6.0.0",
  "qdrant-client>=1.15.1",
  "huggingface-hub>=0.18.0",
  "safetensors",
  "accelerate",
  "requests"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "models/*"]
