[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfg-chatbot-backend"
version = "1.0.0"
description = "Backend for TFG Chatbot (FastAPI)"
authors = [ { name = "Gabriel Francisco" } ]
dependencies = [
  "langchain-openai",
  "langchain-community",
  "langchain-core",
  "langgraph",
  "python-dotenv",
  "duckduckgo-search",
  "ddgs",
  "langgraph-checkpoint-sqlite",
  "fastapi",
  "uvicorn[standard]"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
