[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfg-chatbot-backend"
version = "1.0.0"
description = "Backend for TFG Chatbot (FastAPI)"
authors = [ { name = "Gabriel Francisco" } ]
dependencies = [
  "langchain",
  "langchain-openai",
  "langchain-google-genai",
  "langchain-community",
  "langchain-core",
  "langgraph",
  "python-dotenv",
  "pymongo",
  "duckduckgo-search",
  "ddgs",
  "langgraph-checkpoint-sqlite",
  "fastapi",
  "uvicorn[standard]",
  "beautifulsoup4>=4.12.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
