[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfg-chatbot-rag-service"
version = "1.0.0"
description = "RAG service for TFG Chatbot"
authors = [ { name = "Gabriel Francisco" } ]
dependencies = [
  "langchain>=0.3.0,<0.4.0",
  "langchain-qdrant>=0.1.0",
  "langchain-ollama>=0.1.0",
  "langchain-core>=0.3.0,<0.4.0",
  "langchain-text-splitters>=0.3.0,<1.1.0",
  "qdrant-client>=1.7.0",
  "pypdf>=4.0.0",
  "python-docx>=1.0.0",
  "python-multipart>=0.0.6",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.0.0,<3.0.0",
  "pydantic-settings>=2.0.0,<3.0.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.21.0",
  "requests>=2.31.0"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
